	Vifm Q2A site.

	Fixed 'relativenumber' being effectively ignored in inactive pane on
	UI redraw from active pane.  Thanks to filterfalse.

	Fixed bar (`|`) being treated as command separator in /pattern/ passed to
	:[un]select.  Thanks to filterfalse.

	Fixed abbreviations of :commands with `!` or `?` as custom separator (e.g.
	`:s!a!b!`) being resolved incorrectly.

0.9.1-beta to 0.9.1

	Fixed :clone and :copy refusing to copy broken symbolic links, even though C
	and p keys copy them.

	Fixed C key not checking readability of a single unselected file, like
	:clone does.

	Fixed possible crash on `:highlight clear {pattern}` and highlights not
	being updated.

	Fixed reported free space on *nix. (make it consistent with what 'df'
	reports).  Patch by Dmitry Frank (a.k.a. dimonomid).

0.9 to 0.9.1-beta

	Added "inode" sorting key, which sorts entries by inode number.  Thanks to
	eco0414.

	Added retry/ignore/abort prompt for file copying and directory/file/symlink
	creation when 'syscalls' is on.  Thanks to einhander.

	Added AuxWin highlight group for highlighting auxiliary parts of windows.

	Added 'millerview' option that enables cascading columns interface for the
	view.  Thanks to sudo-nice.

	Added 'milleroptions' option that configures miller view.

	Added [r/]r/[R/]R normal mode shortcuts that map to :siblprev and :siblnext
	with and without wrapping correspondingly.  Thanks to filterfalse.

	Added 'lsoptions' option that allows to get transposed grid in ls-like
	view.  Thanks to Dmitry Frank (a.k.a. dimonomid).

	Added ability to remove filename-specific highlighting rules with
	`:highlight clear {pattern}`.  Thanks to aleksejrs.

	Added completion of filename-specific highlight groups for :highlight
	command.

	Added term() builtin function, which differs from system() only by its
	ability to run interactive applications without confusing vifm's
	interactions with the terminal.  Thanks to Dmitry Frank (a.k.a. dimonomid).
