@@ -254,6 +254,9 @@
 	Fixed abbreviations of :commands with `!` or `?` as custom separator (e.g.
 	`:s!a!b!`) being resolved incorrectly.
 
+	Fixed bar (`|`) being treated as command separator in /pattern/ passed to
+	:commands using custom separators (e.g., in `:s!//|//!`).
+
 0.9.1-beta to 0.9.1
 
 	Fixed :clone and :copy refusing to copy broken symbolic links, even though C
